// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VCarousel.js should render component and match snapshot 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon theme--dark"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 46px;"
        >
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon theme--dark"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 46px;"
        >
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js should render component with custom duration between image cycles and match snapshot 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon theme--dark"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 46px;"
        >
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon theme--dark"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 46px;"
        >
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js should render component with custom icon and match snapshot 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon theme--dark"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 46px;"
        >
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon theme--dark"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 46px;"
        >
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
    <button type="button"
            class="btn btn--icon btn--small theme--dark carousel__controls__item carousel__controls__item--active"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 18px;"
        >
          stop
        </i>
      </div>
    </button>
    <button type="button"
            class="btn btn--icon btn--small theme--dark carousel__controls__item"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 18px;"
        >
          stop
        </i>
      </div>
    </button>
    <button type="button"
            class="btn btn--icon btn--small theme--dark carousel__controls__item"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 18px;"
        >
          stop
        </i>
      </div>
    </button>
  </div>
  <div class="jumbotron tab-transition-enter tab-transition-enter-active"
       style="height: 100%;"
  >
    <div class="jumbotron__wrapper">
      <div class="jumbotron__background">
      </div>
      <div class="jumbotron__content">
      </div>
    </div>
  </div>
  <div class="jumbotron"
       style="height: 100%; display: none;"
  >
    <div class="jumbotron__wrapper">
      <div class="jumbotron__background">
      </div>
      <div class="jumbotron__content">
      </div>
    </div>
  </div>
  <div class="jumbotron"
       style="height: 100%; display: none;"
  >
    <div class="jumbotron__wrapper">
      <div class="jumbotron__background">
      </div>
      <div class="jumbotron__content">
      </div>
    </div>
  </div>
</div>

`;

exports[`VCarousel.js should render component with custom next icon and match snapshot 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon theme--dark"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 46px;"
        >
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon theme--dark"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 46px;"
        >
          stop
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js should render component with custom prev icon and match snapshot 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon theme--dark"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 46px;"
        >
          stop
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon theme--dark"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 46px;"
        >
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js should render component with image cycling off and match snapshot 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon theme--dark"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 46px;"
        >
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon theme--dark"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 46px;"
        >
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js should render component with selected active item 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon theme--dark"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 46px;"
        >
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon theme--dark"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 46px;"
        >
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
    <button type="button"
            class="btn btn--icon btn--small theme--dark carousel__controls__item"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 18px;"
        >
          fiber_manual_record
        </i>
      </div>
    </button>
    <button type="button"
            class="btn btn--icon btn--small theme--dark carousel__controls__item carousel__controls__item--active"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 18px;"
        >
          fiber_manual_record
        </i>
      </div>
    </button>
    <button type="button"
            class="btn btn--icon btn--small theme--dark carousel__controls__item"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 18px;"
        >
          fiber_manual_record
        </i>
      </div>
    </button>
  </div>
  <div class="jumbotron"
       style="height: 100%; display: none;"
  >
    <div class="jumbotron__wrapper">
      <div class="jumbotron__background">
      </div>
      <div class="jumbotron__content">
      </div>
    </div>
  </div>
  <div class="jumbotron tab-transition-enter tab-transition-enter-active"
       style="height: 100%;"
  >
    <div class="jumbotron__wrapper">
      <div class="jumbotron__background">
      </div>
      <div class="jumbotron__content">
      </div>
    </div>
  </div>
  <div class="jumbotron"
       style="height: 100%; display: none;"
  >
    <div class="jumbotron__wrapper">
      <div class="jumbotron__background">
      </div>
      <div class="jumbotron__content">
      </div>
    </div>
  </div>
</div>

`;

exports[`VCarousel.js should render component without delimiters 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon theme--dark"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 46px;"
        >
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon theme--dark"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 46px;"
        >
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="jumbotron tab-transition-enter tab-transition-enter-active"
       style="height: 100%;"
  >
    <div class="jumbotron__wrapper">
      <div class="jumbotron__background">
      </div>
      <div class="jumbotron__content">
      </div>
    </div>
  </div>
  <div class="jumbotron"
       style="height: 100%; display: none;"
  >
    <div class="jumbotron__wrapper">
      <div class="jumbotron__background">
      </div>
      <div class="jumbotron__content">
      </div>
    </div>
  </div>
  <div class="jumbotron"
       style="height: 100%; display: none;"
  >
    <div class="jumbotron__wrapper">
      <div class="jumbotron__background">
      </div>
      <div class="jumbotron__content">
      </div>
    </div>
  </div>
</div>

`;

exports[`VCarousel.js should render component without next icon and match snapshot 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon theme--dark"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 46px;"
        >
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js should render component without prev icon and match snapshot 1`] = `

<div class="carousel">
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon theme--dark"
    >
      <div class="btn__content">
        <i aria-hidden="true"
           class="icon material-icons"
           style="font-size: 46px;"
        >
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;
